added screenshots and try to fix the insert

--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -19,5 +19,7 @@ spec:
         env:
         - name: MONGO_URI
           value: "mongodb://mongodb:27017/"
-        - name: DATABASE_NAME
+        - name: MONGO_DB
           value: "testdb"
+        - name: MONGO_COLLECTION
+          value: "testcollection"
